fix everythings to make dredd tests pass (when my commit will be in nelmioapidoc), except picture
